--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@types/ws": "^8.5.4",
     "chatgpt": "^4.2.0",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "ws": "^8.12.0"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.21"
   }
 }
